removed load balancer web

--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -72,14 +72,14 @@ spec:
             - name: DB_HOST
               value: "postgre"
 ---
-apiVersion: v1
-kind: Service
-metadata:
-  name: web
-spec:
-  selector:
-    app: web
-  ports:
-    - port: 80
-      targetPort: 8080
-  type: LoadBalancer
+# apiVersion: v1
+# kind: Service
+# metadata:
+#   name: web
+# spec:
+#   selector:
+#     app: web
+#   ports:
+#     - port: 80
+#       targetPort: 8080
+#   type: LoadBalancer
